<resources>
    <string name="app_name">Wizardtrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="currency_cop">COP $</string>
    <string name="gastos">GASTOS</string>
    <string name="mi_valor">0</string>
    <string name="mi_valor2">1000000</string>
    <string name="ingresos">INGRESOS</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Cuentas</string>
    <string name="menu_slideshow">Graficos</string>
    <string name="Notificacion">Recuerda registrar tus gastos e ingresos en WizardTrack para mantener el control de tus finanzas personales.</string>
    <string name="Mensaje2">¡Hola, mago financiero!</string>
</resources>